Clean up SaveLoadManager.java and resolve all warnings